--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <table>
             <tr>
               <td>
-                <input type="button" id="clear" value=" C " />
+                <button type="button" id="clear" value=" C " />C</button>
               </td>
               <td>
                 <div class="display">
                   <input type="text" id="sweet" size="22" name="topbar" value="" />
-                  <input type="text" id="sweeter" size="22" name="botbar" value="0" />
+                  <input type="text" id="sweeter" size="22" name="botbar" value="" />
                 </div>
               </td>
             </tr>
@@ -30,72 +30,72 @@
           <table>
             <tr>
               <td>
-                <input type="button" id="backSpace" value=" ◄ " />
+                <button type="button" id="backSpace" value=" ◄ " />◄</button>
               </td>
               <td>
-                <input type="button" class="symbol" value=" √ " />
+                <button type="button" class="symbol" value=" √ " />√</button>
               </td>
               <td>
-                <input type="button" class="symbol" value=" x² " />
+                <button type="button" class="symbol" value=" x² " />x²</button>
               </td>
               <td>
-                <input type="button" class="symbol" value=" 1/x " />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <input type="button" class="button" value="7" />
-              </td>
-              <td>
-                <input type="button" class="button" value="8" />
-              </td>
-              <td>
-                <input type="button" class="button" value="9" />
-              </td>
-              <td>
-                <input type="button" id="divide" value=" ÷ " />
+                <button type="button" class="symbol" value=" 1/x " />1/x</button>
               </td>
             </tr>
             <tr>
               <td>
-                <input type="button" class="button" value="4" />
+                <button type="button" class="button" value="7" />7</button>
               </td>
               <td>
-                <input type="button" class="button" value="5" />
+                <button type="button" class="button" value="8" />8</button>
               </td>
               <td>
-                <input type="button" class="button" value="6" />
+                <button type="button" class="button" value="9" />9</button>
               </td>
               <td>
-                <input type="button" id="multiply" value=" X " />
+                <button type="button" id="divide" value=" ÷ " />÷</button>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <button type="button" class="button" value="4" />4</button>
+              </td>
+              <td>
+                <button type="button" class="button" value="5" />5</button>
+              </td>
+              <td>
+                <button type="button" class="button" value="6" />6</button>
+              </td>
+              <td>
+                <button type="button" id="multiply" value=" X " />X</button>
                 <!-- </td> -->
             </tr>
             <tr>
               <td>
-                <input type="button" class="button" value="1" />
+                <button type="button" class="button" value="1" />1</button>
               </td>
               <td>
-                <input type="button" class="button" value="2" />
+                <button type="button" class="button" value="2" />2</button>
               </td>
               <td>
-                <input type="button" class="button" value="3" />
+                <button type="button" class="button" value="3" />3</button>
               </td>
               <td>
-                <input type="button" id="subtract" value=" - " />
+                <button type="button" id="subtract" value=" - " />-</button>
               </td>
             </tr>
             <tr>
               <td>
-                <input type="button" class="button" value="0" />
+                <button type="button" class="button" value="0" />0</button>
               </td>
               <td>
-                <input type="button" class="button" value="." />
+                <button type="button" class="button" value="." />.</button>
               </td>
               <td>
-                <input type="button" class="equals" value=" = " />
+                <button type="button" class="equals" value=" = " /> = </button>
               </td>
               <td>
-                <input type="button" id="add" value=" + " />
+                <button type="button" id="add" value=" + " /> + </button>
               </td>
             </tr>
           </table>
